// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/GroupsList should match snapshot, while loading 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-loading"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with filters open 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action hidden"
        onClick={[Function]}
      />
    </div>
    <div
      className="group-search-filters"
      id="group-filters"
      onClick={[Function]}
    >
      <div
        className="filter-row"
      >
        <span
          className="filter-check checked"
          onClick={[Function]}
        >
          <CheckboxCheckedIcon />
        </span>
        <span>
          <FormattedMessage
            defaultMessage="Is Linked"
            id="admin.group_settings.filters.isLinked"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="filter-row"
      >
        <span
          className="filter-check checked"
          onClick={[Function]}
        >
          <CheckboxCheckedIcon />
        </span>
        <span>
          <FormattedMessage
            defaultMessage="Is Not Linked"
            id="admin.group_settings.filters.isUnlinked"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="filter-row"
      >
        <span
          className="filter-check "
          onClick={[Function]}
        />
        <span>
          <FormattedMessage
            defaultMessage="Is Configured"
            id="admin.group_settings.filters.isConfigured"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="filter-row"
      >
        <span
          className="filter-check "
          onClick={[Function]}
        />
        <span>
          <FormattedMessage
            defaultMessage="Is Not Configured"
            id="admin.group_settings.filters.isUnconfigured"
            values={Object {}}
          />
        </span>
      </div>
      <a
        className="btn btn-primary search-groups-btn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Search"
          id="search_bar.search"
          values={Object {}}
        />
      </a>
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-loading"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with mixed types selected 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-loading"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 2,
            "startCount": 1,
            "total": 2,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with only linked selected 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-unlink"
        />
        <FormattedMessage
          defaultMessage="Unlink Selected Groups"
          id="admin.group_settings.groups_list.unlink_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-loading"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 2,
            "startCount": 1,
            "total": 2,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with only not-linked selected 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-loading"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 2,
            "startCount": 1,
            "total": 2,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with results 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test1"
      mattermost_group_id={null}
      name="test1"
      onCheckToggle={[Function]}
      primary_key="test1"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={false}
      key="test2"
      mattermost_group_id="group-id-1"
      name="test2"
      onCheckToggle={[Function]}
      primary_key="test2"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={true}
      key="test3"
      mattermost_group_id="group-id-2"
      name="test3"
      onCheckToggle={[Function]}
      primary_key="test3"
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 3,
            "startCount": 1,
            "total": 3,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with results and next 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test1"
      mattermost_group_id={null}
      name="test1"
      onCheckToggle={[Function]}
      primary_key="test1"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={false}
      key="test2"
      mattermost_group_id="group-id-1"
      name="test2"
      onCheckToggle={[Function]}
      primary_key="test2"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={true}
      key="test3"
      mattermost_group_id="group-id-2"
      name="test3"
      onCheckToggle={[Function]}
      primary_key="test3"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test4"
      mattermost_group_id={null}
      name="test4"
      onCheckToggle={[Function]}
      primary_key="test4"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test5"
      mattermost_group_id={null}
      name="test5"
      onCheckToggle={[Function]}
      primary_key="test5"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test6"
      mattermost_group_id={null}
      name="test6"
      onCheckToggle={[Function]}
      primary_key="test6"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test7"
      mattermost_group_id={null}
      name="test7"
      onCheckToggle={[Function]}
      primary_key="test7"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test8"
      mattermost_group_id={null}
      name="test8"
      onCheckToggle={[Function]}
      primary_key="test8"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test9"
      mattermost_group_id={null}
      name="test9"
      onCheckToggle={[Function]}
      primary_key="test9"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test10"
      mattermost_group_id={null}
      name="test10"
      onCheckToggle={[Function]}
      primary_key="test10"
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 13,
            "startCount": 1,
            "total": 13,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with results and next and previous 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test1"
      mattermost_group_id={null}
      name="test1"
      onCheckToggle={[Function]}
      primary_key="test1"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={false}
      key="test2"
      mattermost_group_id="group-id-1"
      name="test2"
      onCheckToggle={[Function]}
      primary_key="test2"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={true}
      key="test3"
      mattermost_group_id="group-id-2"
      name="test3"
      onCheckToggle={[Function]}
      primary_key="test3"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test4"
      mattermost_group_id={null}
      name="test4"
      onCheckToggle={[Function]}
      primary_key="test4"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test5"
      mattermost_group_id={null}
      name="test5"
      onCheckToggle={[Function]}
      primary_key="test5"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test6"
      mattermost_group_id={null}
      name="test6"
      onCheckToggle={[Function]}
      primary_key="test6"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test7"
      mattermost_group_id={null}
      name="test7"
      onCheckToggle={[Function]}
      primary_key="test7"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test8"
      mattermost_group_id={null}
      name="test8"
      onCheckToggle={[Function]}
      primary_key="test8"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test9"
      mattermost_group_id={null}
      name="test9"
      onCheckToggle={[Function]}
      primary_key="test9"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test10"
      mattermost_group_id={null}
      name="test10"
      onCheckToggle={[Function]}
      primary_key="test10"
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 33,
            "startCount": 201,
            "total": 33,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev "
      disabled={false}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, with results and previous 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={null}
      key="test1"
      mattermost_group_id={null}
      name="test1"
      onCheckToggle={[Function]}
      primary_key="test1"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={false}
      key="test2"
      mattermost_group_id="group-id-1"
      name="test2"
      onCheckToggle={[Function]}
      primary_key="test2"
    />
    <GroupRow
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      checked={false}
      has_syncables={true}
      key="test3"
      mattermost_group_id="group-id-2"
      name="test3"
      onCheckToggle={[Function]}
      primary_key="test3"
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 13,
            "startCount": 201,
            "total": 13,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev "
      disabled={false}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, without results 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-empty"
    >
      <FormattedMessage
        defaultMessage="No groups found"
        id="admin.group_settings.groups_list.no_groups_found"
        values={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList should match snapshot, without selection 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        onClick={[Function]}
      />
      <i
        className="fa fa-caret-down group-filter-action "
        onClick={[Function]}
      />
    </div>
    <div
      className="group-list-link-unlink"
    >
      <button
        className="btn btn-inactive disabled"
      >
        <i
          className="icon fa fa-link"
        />
        <FormattedMessage
          defaultMessage="Link Selected Groups"
          id="admin.group_settings.groups_list.link_selected"
          values={Object {}}
        />
      </button>
    </div>
  </div>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.group_settings.groups_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-content"
    >
      <div
        className="group-description"
      >
        <FormattedMessage
          defaultMessage="Mattermost Linking"
          id="admin.group_settings.groups_list.mappingHeader"
          values={Object {}}
        />
      </div>
      <div
        className="group-actions"
      />
    </div>
  </div>
  <div
    className="groups-list--body"
    id="groups-list--body"
  >
    <div
      className="groups-list-loading"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 2,
            "startCount": 1,
            "total": 2,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;
